Tests/RunCMake/CMakePresets/MinimumRequiredMajor-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/MinimumRequiredMajor:
Error: @4,14: "cmakeMinimumRequired" major version 1000 must be less than [0-9]*
    "major": 1000
             \^$
